<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity_dangki">
    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcom"
        android:textSize="55sp"
        android:fontFamily="@font/donglebold"
        android:textColor="#1ec2cb"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        tools:targetApi="s" />
    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:translationZ="11dp"
        android:src="@drawable/ic_user"
        android:padding="20dp"
        android:background="@drawable/background_user_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutinput"
        app:layout_constraintBottom_toTopOf="@id/layoutinput"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/layoutinput"
        android:translationZ="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_layout_login"
        app:layout_constraintTop_toBottomOf="@id/textViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        >
        <EditText
            android:translationZ="10dp"
            android:id="@+id/ed_dangki_inputten"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="tên người dùng"
            app:layout_constraintTop_toBottomOf="@id/textViewSignIn"
            android:textSize="16sp"
            android:paddingStart="35dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_edittext_signin"
            />
        <EditText
            android:translationZ="10dp"
            android:id="@+id/ed_dangki_inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhap_tai_khoan"
            app:layout_constraintTop_toBottomOf="@id/textViewSignIn"
            android:textSize="16sp"
            android:paddingStart="35dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_edittext_signin"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_signin"
            android:orientation="horizontal"
            android:translationZ="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/ed_dangki_inputPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_height="50dp"
                android:hint="@string/nhap_mat_khau"
                app:layout_constraintTop_toBottomOf="@id/inputEmail"
                android:textSize="16sp"
                android:paddingStart="20dp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:inputType="textPassword"
                android:textColor="@color/black"

                />
            <ImageView
                android:id="@+id/ic_dangki_showPass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:backgroundTint="#A3A0A0"
                android:background="@drawable/ic_eye"
                android:layout_gravity="center"

                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_signin"
            android:orientation="horizontal"
            android:translationZ="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/ed_dangki_inputPasswordAgain"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_height="50dp"
                android:hint="@string/nhap_lai_mat_khau"
                app:layout_constraintTop_toBottomOf="@id/inputEmail"
                android:textSize="16sp"
                android:paddingStart="20dp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:inputType="textPassword"
                android:textColor="@color/black"

                />
            <ImageView
                android:id="@+id/ic_dangki_showPassAgain"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:backgroundTint="#A3A0A0"
                android:background="@drawable/ic_eye"
                android:layout_gravity="center"

                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/btn_dangki_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button_signin"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/dangki"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:translationZ="10dp"
            android:fontFamily="@font/donglebold"
            app:layout_constraintTop_toBottomOf="@id/layoutinput"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bạn đã có tài khoản?"
                android:fontFamily="@font/dongleregular"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tv_dangki_dangnhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Đăng nhập"
                android:textSize="20sp"
                android:fontFamily="@font/donglebold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>